--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ a:disabled {cursor:wait !important;}
 .FooterP { width: 80%; margin: 20px auto 0px auto; display: inline-block; text-align: center;}
 .FooterP p {padding: 5px 5px 5px 5px; display: inline-block; width: 100%; font-size: 10px;}
 .FooterP p a {text-decoration: underline;}
-.page-container, .dapp-container {z-index: 5; position: relative;margin-bottom: 100px;}
+.page-container, .dapp-container, .DappBox {z-index: 5; position: relative;margin-bottom: 100px;}
 .card {background-color: transparent;}
 .navbar {z-index: 5;}
 .CoveExpl {width: 99%; margin: 30px auto; display: inline-block;}
@@ -63,7 +63,7 @@ a:disabled {cursor:wait !important;}
 .CovLinks h5 {font-size: 15px; display: inline-block; font-weight: bold; width: 100%; margin-top: 20px;}
 .CovLinks a {font-size: 13px; display: inline-block; margin: 5px 5px; text-decoration: underline !important; cursor: pointer; color: #000000;}
 .ConnectBTN {display: inline-block;margin: 30px auto;text-align: center;cursor: pointer; background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);color: #ffffff !important;text-shadow: #c0c0c0 1px 1px;text-decoration: none;cursor: auto;box-shadow: none;border: 1px solid transparent;outline: none;opacity: 1;padding: 10px 30px;border-radius: 12px;font-weight: 500;text-decoration: none;display: inline-block;animation: slidebg 10s linear infinite;}
-.Web3 {width: 80%; font-size: 15px; text-align: center;}
+.Web3 {width: 100%; font-size: 20px; text-align: center; font-weight: bold;}
 .Web3 a {text-decoration: underline !important; color: #7474f7; font-weight: bold;}
 .CovAMMs {width: 30%; display: inline-block; vertical-align: middle; background-color: #5f5b53; border-radius: 8px; margin-left: 8%; padding: 20px 2%;font-weight: bold !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
 .CovAMMs h5 {font-size: 15px; display: inline-block; font-weight: bold; width: 100%; margin-bottom: 20px; color: #ffffff;}
@@ -99,7 +99,13 @@ a:disabled {cursor:wait !important;}
 .health-bar {border-radius: 8px; width: 100%;text-align: left;font-weight: bold;padding: 4px 0;font-size: 14px;}
 .health-bar aside {border-radius: 8px; text-align: center; padding: 5px 0;}
 .health-bar aside span {background-color: transparent; color: #ffffff;}
-
+.DappBox {border-radius: 20px;padding: 50px; text-align: center; display: inline-block; width: 100%; min-height: 360px;}
+.Web3Disclamer {display: inline-block; text-align: center; margin: 20px auto;}
+.DappMenu {width: 100%;display: inline-block;margin: 0px auto 40px auto;text-align: center;}
+.DappMenu li {display: inline-block;cursor: pointer;font-weight: bold;}
+.DappMenu li span {font-size: 15px; font-weight: bold;display: block;padding: 0.5rem 1rem;}
+.DappMenu .nav-selected {border-bottom: 8px #7474f7 solid;}
+.DappMenu .nav-selected span {font-weight: bold;}
 
 .SelectRegular {width: 100%; display: inline-block; font-size: 13px; font-weight: bold; padding: 7px 2%;border: 1px solid; border-radius: 8px; background-color: transparent;max-width: 370px;}
 .TextRegular {width: 100%; display: inline-block; font-size: 13px; font-weight: bold; padding: 7px 2%;border: 1px solid; border-radius: 8px; background-color: transparent;max-width: 370px;}
@@ -292,7 +298,7 @@ a:disabled {cursor:wait !important;}
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
 .fantasy .page-container {background-image: url(./assets/images/index.jpg) !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
-.fantasy .dapp-container {background-image: url(./assets/images/index.jpg) !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
+.fantasy .dapp-container, .fantasy .DappBox {background-image: url(./assets/images/index.jpg) !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
 .fantasy .TitleCov {color: #ffffff;}
 .fantasy .fantasyMenu:hover, .fantasy .fantasyMenu {color: #ffffff;}
 .fantasy .BtnConnectAfter, .fantasy .BtnConnect,.fantasy .menuIconEth, .fantasy .ChangeMod {display: none !important;}
@@ -307,7 +313,7 @@ a:disabled {cursor:wait !important;}
 
 .penguin h1, .penguin .aside, .penguin input[type="file"], .penguin p, .penguin h2, .penguin h3, .penguin h4, .penguin h5, .penguin h6, .penguin label, .penguin span {color: #ffffff;}
 .penguin {background: rgb(58,60,106);background: linear-gradient(135deg, rgba(58,60,106,1) 0%, rgba(0,0,0,1) 41%);}
-.penguin .dapp-container {background-color: #2d2e40 !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
+.penguin .dapp-container, .penguin .DappBox {background-color: #2d2e40 !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
 .penguin .sidebar-menu-link, .penguin .nav-link, .penguin .fantasyMenu:hover, .penguin .fantasyMenu, .penguin .form-check-label, .penguin .infoList, .penguin .StatsBro, .penguin .StatsBroO, .penguin .IndexRegular, .penguin .Web3, .penguin .disclamer, .penguin .TitleCov, .penguin .xTitle, .penguin .StatsIndicator a, .penguin .QuestionRegular label,.penguin .DisclamerRegular p, .penguin .InputTokensRegular p, .penguin .Resultsregular p, .penguin .Resultsregular p, .penguin .Rebalance aside h6, .penguin .Rebalance aside p, .penguin .FarmThings p, .penguin .FarmTitle aside h6, .penguin .FarmSetupMain h5 {color: #ffffff;}
 .penguin .custom-control-label::before, .penguin .custom-file-label, .penguin .custom-select, .penguin .custom-select:focus {transition: none; background: url("./assets/images/arrowdown.png") right 0.75rem center/15px 10px no-repeat;border-color: #9e6915 !important; box-shadow: none;}
 .penguin .token-filter-input {border-color: #9e6915 !important;}
@@ -330,7 +336,7 @@ a:disabled {cursor:wait !important;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
-.magic .dapp-container {background-color: #ffffff !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
+.magic .dapp-container, .magic .DappBox {background-color: #ffffff !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
 .magic .custom-control-label::before, .magic .custom-file-label, .magic .custom-select, .magic .custom-select:focus {transition: none; background: url("./assets/images/arrowdownblack.png") right 0.75rem center/15px 10px no-repeat;}
 .magic .wusd-pair-select, .magic .token-filter-input {background-color: #ffffff !important; color: #000000;}
 .magic .LogoM {background-position: 0 -50px;}
@@ -363,14 +369,14 @@ a:disabled {cursor:wait !important;}
 
 @media only screen and (max-device-width: 750px) {
    .IndexRegularText iframe {display: none;}
-   .page-container, .dapp-container {width: 270px !important; display: inline-block; margin: 0px auto;}
+   .page-container, .dapp-container, .DappBox {width: 270px !important; display: inline-block; margin: 0px auto;}
    .TitleCov {display: none;}
    .CovTITLE figure {width: 90%;}
    .DescCov p {font-size: 12px;}
    .page-container .FooterP {display: none;}
    .TextRegular {width: 100%;}
    .IndexRegular .IndexRegularImg {width: 90%;}
-   .dapp-container, .page-container {padding: 2px !important;}
+   .dapp-container, .page-container, .DappBox {padding: 2px !important;}
    .StatsBro {display: none;}
    .StatsSis {width: 100%;}
    .TextAreaRegular {max-width: 100%;}
@@ -408,9 +414,9 @@ a:disabled {cursor:wait !important;}
    .IndexRegular {position: relative;}
    .IndexRegular .IndexRegularText {width: 80%; margin-top: 20px;}
    .IndexRegular .IndexRegularText h3 {width: 95%;font-size: 18px; margin-top: 20px; display: inline-block;}
-   .IndexRegularImg {position: absolute; bottom: 5px;right: 5%; width: 90% !important;}
+   .IndexRegularImg {width: 65% !important;}
    .IndexRegular .IndexRegularText p {font-size: 10px;font-weight: bold;}
-   .IndexRegular {display: inline-block !important; min-height: 300px !important; padding: 20px 20px 300px 20px !important;}
+   .IndexRegular {display: inline-block !important; min-height: 300px !important; padding: 20px 20px 20px 20px !important;}
    .IndexThings, .IndexManageMB, .IndexContractOpenCollateralSingle {width: 90%;}
    .IndexThings {margin-left: auto; margin: 10px auto;}
    .ListOfThings, .IndexContract, .InflationContract, .InflationContractOpen {max-width: 95%;min-width: 95%;}
@@ -424,7 +430,7 @@ a:disabled {cursor:wait !important;}
    .InflationContract p {display: none;}
    .InflationContract .InflationContractButton {width: 100%; text-align: center; margin-left: auto; margin: 10px auto;}
    .InflationContractOpen h3 {font-size: 15px;}
-   .dapp-container {min-height: 300px;}
+   .dapp-container, .DappBox {min-height: 300px;}
    .TokenOperation h6 {width: 100%; font-size: 15px; text-align: center; margin: 8px auto; margin-bottom: 8px;}
    .TokenOperationLinks, .CreateList {width: 100%;}
    .TokenOperation p {font-size: 13px;}
@@ -437,7 +443,7 @@ a:disabled {cursor:wait !important;}
    .CreateList .TokenLoaded {width: 90%;margin-left: 25px;}
    .ApplicationBox {width: 100%;margin-left: 0; margin: 0 auto; display: block;border-radius: 0 !important;}
    .ApplicationAll {width: 100%;margin: 0px auto 0px auto;border-radius: 0 !important;}
-   .dapp-container {width: 100% !important;border-radius: 0 !important;}
+   .dapp-container, .DappBox {width: 100% !important;border-radius: 0 !important;}
    .app-container {width: 100% !important;border-radius: 0 !important;}
    .page-container-wrapper, .page-container {width: 100% !important;border-radius: 0 !important;}
    .Footer {display: none;}
@@ -463,7 +469,7 @@ a:disabled {cursor:wait !important;}
    .grimoireBox {max-width: 650px;width: 650px;}
    .ApplicationBox {width: 99%;margin-left: 0; margin: 0 auto; display: block;}
    .ApplicationAll {width: 100%;margin: 40px auto 20px auto;}
-   .dapp-container {width: 100% !important; display: inline-block !important;;}
+   .dapp-container, .DappBox {width: 100% !important; display: inline-block !important;;}
    .app-container {width: 100% !important; display: inline-block !important;;}
    .page-container-wrapper, .page-container {width: 100% !important;display: inline-block !important;}
    .ApplicationMenu {position: absolute;}
