--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ a:disabled {cursor:wait !important;}
 .health-bar aside span {background-color: transparent; color: #ffffff;}
 .DappBox {border-radius: 20px;padding: 50px; text-align: center; display: inline-block; width: 100%; min-height: 360px;}
 .Web3Disclamer {display: inline-block; text-align: center; margin: 20px auto;}
-.DappMenu {width: 100%;display: inline-block;margin: 0px auto 40px auto;text-align: center;}
+.DappMenu {width: 100%;display: inline-block;margin: 0px auto 40px auto;text-align: center;margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 0px;}
 .DappMenu li {display: inline-block;cursor: pointer;font-weight: bold;}
 .DappMenu li span {font-size: 15px; font-weight: bold;display: block;padding: 0.5rem 1rem;}
 .DappMenu .nav-selected {border-bottom: 8px #7474f7 solid;}
@@ -378,16 +378,19 @@ a:disabled {cursor:wait !important;}
    .IndexRegular .IndexRegularImg {width: 90%;}
    .dapp-container, .page-container, .DappBox {padding: 2px !important;}
    .StatsBro {display: none;}
-   .StatsSis {width: 100%;}
+   .StatsSis {width: 95%;}
    .TextAreaRegular {max-width: 100%;}
    .nav-link {font-size: 10px;}
    .HealthContainer {width: 100%;display: inline-block;margin: 10px auto 40px auto;}
-   .StatsIndicator {width: 100%;}
+   .StatsIndicator {width: 50%;}
    .StatsLink {text-align: left;}
    .ApproveBTN {display: inline-block; margin: 10px auto; font-size: 13px;}
    .InputTokenRegular aside p {width: 75%; margin-left: 5%;}
-   .StatsIndicator h6 {font-size: 20px;}
-   .xTitle {font-size: 22px;}
+   .StatsIndicator h6 {font-size: 14px;}
+   .StatsIndicator p, .StatsIndicator a {font-size: 12px;}
+   .Rebalance aside {width: 100%; padding-right: 0; text-align: center; margin-bottom: 15px;}
+   .xTitle {font-size: 18px;}
+   .xTitle img {width: 27px;height: 27px;}
    .CovDesc {width: 90%;}
    .CovAMMs {width: 90%; margin-top: 10px; margin-left: 0;}
    .Menuone li:hover .Ditone {display: none !important;}
@@ -450,6 +453,8 @@ a:disabled {cursor:wait !important;}
    #root {padding-bottom: 0 !important;}
    .ApplicationMenu {position: absolute;}
    .fantasy .navbar {background-color: #2d2e40 !important;}
+   .FooterP {width: 100%;}
+   .DappMenu li span {font-size: 11px;font-weight: bold;display: block;padding: 0.2rem .5rem;}
 }
 
 @media only screen and (min-device-width: 751px) and (max-device-width: 1024px) {
