--- a/src/index.css
+++ b/src/index.css
@@ -178,6 +178,8 @@ a:disabled {cursor:wait !important;}
 .CreateListS .TextRegular {width: 300px;}
 .InputForm .SpecialInputPerch input {margin: 0;}
 .InputForm .SpecialInputPerch {margin-top: 10px;}
+.PathSelected {width: 300px; text-align: center; margin: 5px auto; display: block;}
+.PathSelected p {width: auto; display: inline;}
 
 .MainExploration {width: 95%; display: inline-block; margin: 10px auto; width: 600px;}
 .SortSection {width: 100%; text-align: center; display: inline-block; margin: 10px auto; min-width: 600px;} 
