--- a/src/index.css
+++ b/src/index.css
@@ -368,6 +368,8 @@ a:disabled {cursor:wait !important;}
 .FromETHPrestoDesc img {width: 15px; height: 15px;}
 .InputTokenRegularS {position: relative;}
 .InputTokenRegularS .PrestoSelector {padding: 2px 5px; position: absolute; left: -80px; top: 2px;}
+.OnlyMobileVersion {display: none !important;}
+
 
 @media only screen and (max-device-width: 750px) {
    .IndexRegularText iframe {display: none;}
@@ -457,6 +459,8 @@ a:disabled {cursor:wait !important;}
    .fantasy .navbar {background-color: #2d2e40 !important;}
    .FooterP {width: 100%;}
    .DappMenu li span {font-size: 11px;font-weight: bold;display: block;padding: 0.2rem .5rem;}
+   .NUUUMobileVersion {display: none !important;}
+   .OnlyMobileVersion {display: inline-block !important; margin: 25px auto;}
 }
 
 @media only screen and (min-device-width: 751px) and (max-device-width: 1024px) {
