--- a/src/index.css
+++ b/src/index.css
@@ -65,19 +65,22 @@ a:disabled {cursor:wait !important;}
 .ConnectBTN {display: inline-block;margin: 30px auto;text-align: center;cursor: pointer; background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);color: #ffffff !important;text-shadow: #c0c0c0 1px 1px;text-decoration: none;cursor: auto;box-shadow: none;border: 1px solid transparent;outline: none;opacity: 1;padding: 10px 30px;border-radius: 12px;font-weight: 500;text-decoration: none;display: inline-block;animation: slidebg 10s linear infinite;}
 .Web3 {width: 100%; font-size: 20px; text-align: center; font-weight: bold;}
 .Web3 a {text-decoration: underline !important; color: #7474f7; font-weight: bold;}
-.CovAMMs {width: 30%; display: inline-block; vertical-align: middle; background-color: #5f5b53; border-radius: 8px; margin-left: 8%; padding: 20px 2%;font-weight: bold !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
+.CovSide {width: 30%; display: inline-block; vertical-align: middle;margin-right: 8%;}
+.CovDiversity {width: 90%; display: block; margin-bottom: 20px;}
+.CovDiversity img {width: 100%; height: auto;} 
+.CovAMMs {width: 100%; display: inline-block; vertical-align: middle; background-color: #5f5b53; border-radius: 8px; padding: 20px 2%;font-weight: bold !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
 .CovAMMs h5 {font-size: 15px; display: inline-block; font-weight: bold; width: 100%; margin-bottom: 20px; color: #ffffff;}
 .CovAMMs a {font-size: 13px; display: inline-block; text-decoration: none !important; font-weight: bold !important; cursor: pointer; width: 100%; text-align: left;color: #ffffff !important;}
 .disclamer {font-size: 9px; color: #636363; width: 60%; text-align: center;}
 .disclamer a {text-decoration: underline !important;}
 .IndexRegularText iframe {border: 2px solid #9e6915; border-radius: 8px;}
 @keyframes slidebg {to {background-position:20vw;}}
-.DescCov {text-align: center; width: 80%; display: inline-block; margin: 30px auto;}
+.DescCov {text-align: center; width: 80%; display: inline-block; margin:0 auto 30px auto;}
 .DescCov p {font-size: 14px;}
 .DescCov h2 {text-align: center; font-size: 30px; font-weight: bold !important;}
 .DescCov h5 {text-align: center; font-size: 20px;font-weight: bold !important; margin: 10px auto;}
-.CovTITLE {margin: 20px auto; display: inline-block; width: 90%; text-align: center;}
-.CovTITLE figure {width: 40%; display: inline-block; height: auto;}
+.CovTITLE {margin: 2px auto; display: inline-block; width: 90%; text-align: center;}
+.CovTITLE figure {width: 65%; display: inline-block; height: auto; margin: 0 0 0rem;}
 .CovTITLE figure img {width: 100%; display: inline-block; height: auto;}
 .LogoWUSD {width: 80%; margin: 10px auto;display: inline-block;}
 .LogoWUSD img {width: 100%; display: inline-block; height: auto;}
@@ -96,6 +99,7 @@ a:disabled {cursor:wait !important;}
 .health-bar aside {border-radius: 8px; text-align: center; padding: 5px 0;}
 .health-bar aside span {background-color: transparent; color: #ffffff;}
 .DappBox {border-radius: 20px;padding: 50px; text-align: center; display: inline-block; width: 100%; min-height: 360px;}
+.DappBoxI {padding: 70px 50px}
 .Web3Disclamer {display: inline-block; text-align: center; margin: 20px auto;}
 .DappMenu {width: 100%;display: inline-block;text-align: center;margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 0px;margin: 0px auto 40px auto;}
 .DappMenu li {display: inline-block;cursor: pointer;font-weight: bold;}
@@ -376,7 +380,7 @@ a:disabled {cursor:wait !important;}
    .page-container, .dapp-container, .DappBox {width: 270px !important; display: inline-block; margin: 0px auto;}
    .TitleCov {display: none;}
    .CovTITLE figure {width: 90%;}
-   .DescCov p {font-size: 12px;}
+   .DescCov p {font-size: 11px; font-weight: 600; text-align: left; margin-bottom: 5px;}
    .page-container .FooterP {display: none;}
    .TextRegular {width: 100%;}
    .IndexRegular .IndexRegularImg {width: 90%;}
@@ -396,7 +400,8 @@ a:disabled {cursor:wait !important;}
    .xTitle {font-size: 18px;}
    .xTitle img {width: 27px;height: 27px;}
    .CovDesc {width: 90%;}
-   .CovAMMs {width: 90%; margin-top: 10px; margin-left: 0;}
+   .CovSide {width: 90%; margin-top: 10px; margin-left: 0;}
+   .CovAMMs {width: 90%; margin-left: 0;}
    .Menuone li:hover .Ditone {display: none !important;}
    .Ditone {display: none !important;}
    .sidebar-menu-link-selected .Ditone {display: none !important;}
@@ -461,6 +466,21 @@ a:disabled {cursor:wait !important;}
    .DappMenu li span {font-size: 11px;font-weight: bold;display: block;padding: 0.2rem .5rem;}
    .NUUUMobileVersion {display: none !important;}
    .OnlyMobileVersion {display: inline-block !important; margin: 25px auto;}
+   .CovSide {margin-bottom: 20px;}
+   .CovLinks h5 {margin-top: 0px;}
+   .CovDesc h3 {font-size: 20px;margin-bottom: 5px;}
+   .CovDiversity {width: 60%;display: inline-block;}
+   .CovAMMs {padding: 5px 2%;}
+   .CovAMMs h5 {margin-bottom: 10px;}
+   .CoveExpl {margin: 30px auto 5px auto;}
+   .MenuMobileIndex .Menuone {display: block; padding: 5px 5%; background-color: #5f5b53;width: 200px;border-radius: 12px;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;} 
+   .MenuMobileIndex .nav-link {display: block;padding: 0.2rem 0em;text-align: left;}
+   .MenuMobileIndex .sidemenu-active {position: static; border: none;}
+   .MenuMobileIndex .Menuone h5 {color: #ffffff;}
+   .PrestoSelector {margin: 0 0px 3px 3px !important;padding: 0px 4px !important;}
+   .InputTokenRegularS .PrestoSelector {left: auto;right: 0px;top: -28px;}
+   .PrestoSelector span {font-size: 12px;margin: auto 4px auto auto;}
+   .QuestionRegular {font-size: 12px;margin: 10px auto 0px auto;}
 }
 
 @media only screen and (min-device-width: 751px) and (max-device-width: 1024px) {
