--- a/src/index.css
+++ b/src/index.css
@@ -219,7 +219,7 @@ a:disabled {cursor:wait !important;}
 .YourFarmingPositions {width: 100%; border-top: 1px solid; padding-top: 10px; text-align: center;}
 .YourFarmingPositions p {font-size: 13px; margin: 5px; display: inline-block; width: 100%;}
 .YourFarmingPositions .web2ActionBTN {margin: 5px;}
-.FarmYou {width: 48%; display: inline-block; margin-right: 2%; vertical-align: middle; text-align: left;}
+.FarmYou {width: 48%; display: inline-block; margin-right: 2%; vertical-align: middle; text-align: center;}
 .Farmed {width: 48%; display: inline-block;vertical-align: middle; text-align: right;}
 .SetupFarmingBotton {display: inline-block; width: 15%; vertical-align: middle; text-align: left;}
 .InflationContract h4 {font-size: 20px; display: inline-block; width: 70%; font-weight: bold; vertical-align: middle; margin-bottom: 20px;}
@@ -319,6 +319,20 @@ a:disabled {cursor:wait !important;}
 .FarmActions .Web3BTNs {display: block;margin: 20px auto 0px auto;}
 .LockedFarmPositions {display: block; margin: 30px auto; width: 100%;}
 .ListOfThings h3 {font-size: 20px;}
+.FarmActions .Web2ActionsBTNs {width: 100%;}
+input[type=range] {height: 39px;-webkit-appearance: none;margin: 10px 0;width: 100%;}
+ input[type=range]:focus {outline: none;}
+ input[type=range]::-webkit-slider-runnable-track {width: 100%;height: 16px;cursor: pointer;animate: 0.2s;box-shadow: 0px 0px 1px #000000;background: #9e6915;border-radius: 50px;border: 0px solid #010101;}
+ input[type=range]::-webkit-slider-thumb {box-shadow: 1px 1px 1px #000031;border: 0px solid #00001E;height: 32px;width: 30px;border-radius: 16px;background: #9e6915;cursor: pointer;-webkit-appearance: none;margin-top: -8px;}
+ input[type=range]:focus::-webkit-slider-runnable-track {background: #9e6915;}
+ input[type=range]::-moz-range-track {width: 100%;height: 16px;cursor: pointer;animate: 0.2s;box-shadow: 0px 0px 1px #000000;background: #9e6915;border-radius: 50px;border: 0px solid #010101;}
+ input[type=range]::-moz-range-thumb {box-shadow: 1px 1px 1px #000031;border: 0px solid #00001E;height: 32px;width: 30px;border-radius: 16px;background: #9e6915;cursor: pointer;}
+ input[type=range]::-ms-track {width: 100%;height: 16px;cursor: pointer;animate: 0.2s;background: transparent;border-color: transparent;color: transparent;}
+ input[type=range]::-ms-fill-lower {background: #9e6915;border: 0px solid #010101;border-radius: 100px;box-shadow: 0px 0px 1px #000000;}
+ input[type=range]::-ms-fill-upper {background: #9e6915;border: 0px solid #010101;border-radius: 100px;box-shadow: 0px 0px 1px #000000;}
+ input[type=range]::-ms-thumb {margin-top: 1px;box-shadow: 1px 1px 1px #000031;border: 0px solid #00001E;height: 32px;width: 30px;border-radius: 16px;background: #9e6915;cursor: pointer;}
+ input[type=range]:focus::-ms-fill-lower {background: #9e6915;}
+ input[type=range]:focus::-ms-fill-upper {background: #9e6915;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -358,7 +372,7 @@ a:disabled {cursor:wait !important;}
 .penguin .input-group-text {background-color: transparent;border-top: 1px solid #9e6915; border-right: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-left: 0px solid #9e6915; color: #ffffff;}
 .penguin .form-control, .penguin .form-control:focus {background-color: transparent;border-top: 1px solid #9e6915; border-left: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-right: 0px solid #9e6915; color: #ffffff;}
 .penguin .FarmContract,.penguin .IndexContract, .penguin .FarmContractOpen, .penguin .FarmSetup, .penguin .InflationContract, .penguin .TokenOperation, .penguin .IndexContractOpenInfo, .penguin .IndexContractOpenCollateralSingle, .penguin .IndexContractOpenStatistic, .penguin .ShowCollateralNeededBal {border-color: #4d4c4a;}
-
+.penguin .YourFarmingPositions {border-color: #636363;}
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
 .magic .dapp-container, .magic .DappBox {background-color: #ffffff !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
@@ -384,6 +398,9 @@ a:disabled {cursor:wait !important;}
 .magic .form-control, .magic .form-control:focus {background-color: transparent;border-top: 1px solid #9e6915; border-left: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-right: 0px solid #9e6915; color: #000000;}
 .magic .FarmContract,.magic .IndexContract, .magic .FarmContractOpen, .magic .FarmSetup, .magic .InflationContract, .magic .TokenOperation, .magic .IndexContractOpenInfo, .magic .IndexContractOpenCollateralSingle, .magic .IndexContractOpenStatistic, .magic .ShowCollateralNeededBal {border-color: #ebebeb;}
 .magic .IndexSinglePerchBar span {color: #ffffff;}
+.magic .YourFarmingPositions {border-color: #bdbdbd;}
+
+
 .PrestoSelector {padding: 5px; margin: 2px 3px; border-radius: 8px; border: 1px solid #9e6915;}
 .PrestoSelector span {font-size: 14px; margin: auto 5px auto auto; display: inline-block; vertical-align: middle;}
 .FromETHPrestoDesc {width: 100%;}
