--- a/src/index.css
+++ b/src/index.css
@@ -341,7 +341,12 @@ input[type=range] {height: 39px;-webkit-appearance: none;margin: 10px 0;width: 1
  .DiffWallet {width: 390px; display: block; margin: 10px auto;}
  .MetamaskAddButton {color: #7474f7; border-radius: 8px; border: 1px solid #7474f7;padding: 2px 8px;font-size: 12px; margin-left: 5px; text-decoration: none !important;}
  .MetamaskAddButton:hover {color: #7474f7; border-radius: 8px; border: 1px solid #7474f7;padding: 2px 8px;font-size: 12px; margin-left: 5px; text-decoration: none !important;}
-.fantasy {background-color: #4d4c4a !important;}
+ .UnlockInfo {font-size: 14px !important;width: 90% !important;display: block !important;}
+ .UnlockInfoBal {font-size: 12px !important;width: 90% !important;}
+.UnlockDiv, .Tranferpos {padding: 10px 8px; border: 1px solid #9e6915; border-radius: 12px;}
+
+
+ .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
 .fantasy .page-container {background-image: url(./assets/images/index.jpg) !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
 .fantasy .dapp-container, .fantasy .DappBox {background-image: url(./assets/images/index.jpg) !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
